[project]
name = "dworshak"
dynamic = ["version"]
description = "Manage local, encrypted credentials. The **dworshak* CLI leverages openssl, sqlite3, and cryptography."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.0",
    "rich>=13.0.0",
    "dworshak-access>=0.1.22",
    "pyhabitat>=1.1.26",
    "typer-helptree>=0.1.6",
]
authors = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
maintainers = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


keywords = [
    "credentials",
    "security"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/dworshak"
Repository = "https://github.com/city-of-memphis-wastewater/dworshak"

[project.scripts]
dworshak = "dworshak.cli:app"

[tool.uv]
# This tells uv that if it can't find a wheel for aarch64, 
# it is allowed to build from source using your local Rust/Clang.
package = true
resolution = "highest"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/dworshak/VERSION"}
