[project]
name = "dworshak"
dynamic = ["version"]
description = "Manage local, encrypted credentials. The dworshak CLI leverages openssl, sqlite3, and cryptography."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.21.0",
    "rich>=13.0.0",
    "pyhabitat>=1.1.38",
    "typer-helptree>=0.2.4",
    "dworshak-secret[typer]>=1.2.4",
    "dworshak-prompt[typer]>=0.2.18",
    "dworshak-config[typer]>=0.2.1",
    "dworshak-env[typer]>=0.1.2",
]
authors = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
maintainers = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable"
]


keywords = [
    "credentials",
    "security"
]

[project.optional-dependencies]
crypto = [
    "cryptography>=46.0.3",
    "dworshak-secret[typer,crypto]",
    "dworshak-prompt[typer,crypto]"
]
full = [
    "dworshak[crypto]"
]
build = [
    "shiv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/dworshak"
Repository = "https://github.com/city-of-memphis-wastewater/dworshak"

[project.scripts]
dworshak = "dworshak.cli:app"

[tool.uv]
# This tells uv that if it can't find a wheel for aarch64, 
# it is allowed to build from source using your local Rust/Clang.
package = true
resolution = "highest"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/dworshak/VERSION"}
